@@ -1,8 +1,9 @@
-CHANGES.txt - 2009-05-20
+CHANGES.txt - 2009-05-21
 ------------------------
 
 CHANGES IN CUPS V1.4??
 
+	- cupsLangDefault() did not return the correct language on Mac OS X.
 	- The Mac OS X USB backend did not handle aborted or stalled pipe
 	  conditions properly, which prevented drivers from ejecting partial
 	  pages when a job was canceled or held.
